First commited as before_12564_rev1